# ususat

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  RtThread.h  kalmanfilter.cpp  kalmanfilter.h  main.cpp  motorcontrol.cpp  motorcontrol.h  ususat.files
3dm/: gx3communicator.cpp  gx3communicator.h  messages.h
doc/html/: _beagle___g_p_i_o_8cpp.html  _beagle___g_p_i_o_8cpp.js  _beagle___g_p_i_o_8cpp__incl.map  _beagle___g_p_i_o_8cpp__incl.md5  _beagle___g_p_i_o_8cpp_source.html  _beagle___g_p_i_o_8h.html  _beagle___g_p_i_o_8h.js  _beagle___g_p_i_o_8h__dep__incl.map  _beagle___g_p_i_o_8h__dep__incl.md5  _beagle___g_p_i_o_8h__incl.md5  _beagle___g_p_i_o_8h_source.html  _i2_c_bus_8cpp.html  _i2_c_bus_8cpp__incl.map  _i2_c_bus_8cpp__incl.md5  _i2_c_bus_8cpp_source.html  _i2_c_bus_8h.html  _i2_c_bus_8h__dep__incl.map  _i2_c_bus_8h__dep__incl.md5  _i2_c_bus_8h__incl.map  _i2_c_bus_8h__incl.md5  _i2_c_bus_8h_source.html  _i_m_u_8h.html  _i_m_u_8h__dep__incl.map  _i_m_u_8h__dep__incl.md5  _i_m_u_8h__incl.map  _i_m_u_8h__incl.md5  _i_m_u_8h_source.html  _l3_g_8cpp.html  _l3_g_8cpp.js  _l3_g_8cpp__incl.map  _l3_g_8cpp__incl.md5  _l3_g_8cpp_source.html  _l3_g_8h.html  _l3_g_8h.js  _l3_g_8h__dep__incl.map  _l3_g_8h__dep__incl.md5  _l3_g_8h__incl.map  _l3_g_8h__incl.md5  _l3_g_8h_source.html  _l_s_m303_8cpp.html  (+234 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_67.js  all_69.js  all_6a.js  all_6b.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  classes_62.js  classes_63.js  classes_69.js  classes_6b.js  classes_6c.js  classes_6d.js  classes_70.js  classes_72.js  classes_73.js  defines_61.js  defines_62.js  defines_63.js  defines_67.js  defines_6c.js  defines_6d.js  defines_70.js  defines_73.js  enums_62.js  enums_70.js  enumvalues_61.js  (+47 more)
doc/latex/: _beagle___g_p_i_o_8cpp.tex  _beagle___g_p_i_o_8cpp__incl.md5  _beagle___g_p_i_o_8h.tex  _beagle___g_p_i_o_8h__dep__incl.md5  _beagle___g_p_i_o_8h__incl.md5  _i2_c_bus_8cpp.tex  _i2_c_bus_8cpp__incl.md5  _i2_c_bus_8h.tex  _i2_c_bus_8h__dep__incl.md5  _i2_c_bus_8h__incl.md5  _i_m_u_8h.tex  _i_m_u_8h__dep__incl.md5  _i_m_u_8h__incl.md5  _l3_g_8cpp.tex  _l3_g_8cpp__incl.md5  _l3_g_8h.tex  _l3_g_8h__dep__incl.md5  _l3_g_8h__incl.md5  _l_s_m303_8cpp.tex  _l_s_m303_8cpp__incl.md5  _l_s_m303_8h.tex  _l_s_m303_8h__dep__incl.md5  _l_s_m303_8h__incl.md5  _lock_8h.tex  _lock_8h__dep__incl.md5  _lock_8h__incl.md5  _rt_thread_8cpp.tex  _rt_thread_8cpp__incl.md5  _rt_thread_8h.tex  _rt_thread_8h__dep__incl.md5  _rt_thread_8h__incl.md5  annotated.tex  c_p_w_m_8cpp.tex  c_p_w_m_8cpp__incl.md5  c_p_w_m_8h.tex  c_p_w_m_8h__dep__incl.md5  c_p_w_m_8h__incl.md5  class_beagle___g_p_i_o.tex  class_i2_c_bus.tex  class_i_m_u.tex  (+65 more)
examples/: CMakeLists.txt  dac-example.cpp  datacollector.hpp  gx3-example.cpp  minimu-example.cpp  motor-example.cpp  motorprogrammer.hpp  threading-example.cpp
include/: Beagle_GPIO.h  I2CBus.h  IMU.h  L3G.h  LSM303.h  Lock.h  RtThread.h  cPWM.h  doxygen.h  gx3communicator.h  kalmanfilter.h  mainthread.h  max127.h  messages.h  minimu.h  motor.h  motorcontrol.h  periodicrtthread.h  semaphore.h  sharedqueue.h
minimu/: I2CBus.cpp  I2CBus.h  L3G.cpp  LSM303.cpp  main.cpp.example  minimu.cpp  minimu.h  vector.h
pwm/: Beagle_GPIO.h  max127.cpp  max127.h  motor.cpp  motor.h
src/: Beagle_GPIO.cpp  CMakeLists.txt  I2CBus.cpp  L3G.cpp  LSM303.cpp  RtThread.cpp  cPWM.cpp  gx3communicator.cpp  kalmanfilter.cpp  main.cpp  mainthread.cpp  max127.cpp  minimu.cpp  motor.cpp  motorcontrol.cpp
threading/: Lock.cpp  Lock.h  RtThread.cpp  RtThread.h  main.cpp  periodicrtthread.cpp  periodicrtthread.h  semaphore.h  sharedqueue.h
